--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
