--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-pdf-viewer/core": "^3.12.0",
     "appwrite": "^17.0.0",
     "expo": "~52.0.31",
     "expo-blur": "~14.0.3",
@@ -42,6 +43,7 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-chat": "^2.6.5",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -53,7 +55,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
