--- a/package.json
+++ b/package.json
@@ -49,13 +49,15 @@
     "react-native-screens": "~4.4.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.11.1",
+    "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
+    "world-flags-sprite": "^0.0.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
