--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "mammoth": "^1.9.0",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
+    "pdf2json": "^3.1.5",
+    "pdfjs-dist": "^5.1.91",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
