--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.7.0",
+    "react-native-country-flag": "^2.0.2",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-chat": "^2.6.5",
+    "react-native-immersive": "^2.0.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
