--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-pdf-viewer/core": "^3.12.0",
     "appwrite": "^17.0.0",
+    "axios": "^1.8.4",
     "expo": "~52.0.31",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
