--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.2",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
@@ -65,7 +66,8 @@
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
     "world-flags-sprite": "^0.0.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "expo-navigation-bar": "~4.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
