Language File und Password reset/ Email Verification

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "UReady",
+    "name": "QReady",
     "slug": "node-ready",
     "version": "1.0.0",
     "orientation": "portrait",
