--- a/package.json
+++ b/package.json
@@ -16,33 +16,32 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@react-pdf-viewer/core": "^3.12.0",
     "appwrite": "^17.0.0",
     "axios": "^1.8.4",
-    "expo": "~52.0.31",
+    "expo": "^52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-navigation-bar": "~4.0.9",
+    "expo-router": "^4.0.21",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "mammoth": "^1.9.0",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
     "pdf2json": "^3.1.5",
-    "pdfjs-dist": "^5.1.91",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.9",
     "react-native-appwrite": "^0.7.0",
     "react-native-country-flag": "^2.0.2",
     "react-native-draggable-flatlist": "^4.0.1",
@@ -56,7 +55,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.8.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
@@ -66,8 +65,7 @@
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
     "world-flags-sprite": "^0.0.2",
-    "xlsx": "^0.18.5",
-    "expo-navigation-bar": "~4.0.9"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -75,7 +73,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
