--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "mammoth": "^1.9.0",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
-    "pdf2json": "^3.1.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
@@ -46,6 +45,7 @@
     "react-native-country-flag": "^2.0.2",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
     "react-native-immersive": "^2.0.0",
     "react-native-navigation-bar-color": "^2.0.2",
@@ -60,7 +60,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "^13.13.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
