--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "appwrite": "^17.0.0",
-    "axios": "^1.8.4",
     "expo": "^52.0.46",
-    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.3",
@@ -33,28 +31,21 @@
     "expo-router": "^4.0.21",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
-    "mammoth": "^1.9.0",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "^0.76.9",
     "react-native-appwrite": "^0.7.0",
     "react-native-country-flag": "^2.0.2",
-    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
-    "react-native-immersive": "^2.0.0",
     "react-native-navigation-bar-color": "^2.0.2",
-    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.8.0",
     "react-native-system-navigation-bar": "^2.6.4",
@@ -67,8 +58,7 @@
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
-    "world-flags-sprite": "^0.0.2",
-    "xlsx": "^0.18.5"
+    "world-flags-sprite": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
