--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@stripe/stripe-react-native": "^0.47.0",
     "appwrite": "^17.0.0",
     "expo": "^52.0.46",
     "expo-constants": "~17.0.5",
