--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-navigation-bar": "~4.0.9",
-    "expo-router": "^4.0.21",
+    "expo-router": "~4.0.21",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
-    "react": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "^0.76.9",
     "react-native-appwrite": "^0.7.0",
     "react-native-country-flag": "^2.0.2",
@@ -45,17 +46,17 @@
     "react-native-gifted-chat": "^2.6.5",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.8.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
+    "react-native-video": "^6.14.1",
     "react-native-web": "~0.19.13",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "^13.13.5",
-    "react-native-youtube-iframe": "^2.3.0",
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
