--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@stripe/stripe-react-native": "^0.47.0",
     "appwrite": "^17.0.0",
     "expo": "^52.0.46",
+    "expo-auth-session": "^6.1.5",
     "expo-constants": "~17.0.5",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.3",
