--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
-    "world-flags-sprite": "^0.0.2"
+    "world-flags-sprite": "^0.0.2",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
