--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gorhom/bottom-sheet": "^5.1.5",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/slider": "^4.5.7",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@stripe/stripe-react-native": "^0.47.0",
@@ -35,6 +36,7 @@
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
@@ -62,8 +64,7 @@
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
-    "world-flags-sprite": "^0.0.2",
-    "expo-updates": "~0.27.4"
+    "world-flags-sprite": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
