--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
+    "react-native-iap": "^12.16.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
