--- a/package.json
+++ b/package.json
@@ -17,20 +17,22 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.5",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@stripe/stripe-react-native": "^0.47.0",
+    "@stripe/stripe-react-native": "^0.38.6",
     "appwrite": "^17.0.0",
     "expo": "^52.0.46",
-    "expo-auth-session": "^6.1.5",
+    "expo-auth-session": "~6.0.3",
     "expo-constants": "~17.0.5",
-    "expo-document-picker": "^13.0.3",
+    "expo-dev-client": "~5.0.20",
+    "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-modules-core": "^2.2.3",
     "expo-navigation-bar": "~4.0.9",
     "expo-router": "~4.0.21",
     "expo-splash-screen": "^0.29.24",
@@ -48,7 +50,6 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
-    "react-native-iap": "^12.16.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -61,7 +62,7 @@
     "react-native-video": "^6.14.1",
     "react-native-web": "~0.19.13",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^13.13.5",
+    "react-native-webview": "^13.12.5",
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
