--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -22,7 +22,7 @@
     "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@stripe/stripe-react-native": "^0.38.6",
+    "@stripe/stripe-react-native": "0.38.6",
     "appwrite": "^17.0.0",
     "expo": "^52.0.46",
     "expo-auth-session": "~6.0.3",
