--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@stripe/stripe-react-native": "0.38.6",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
+    "@stripe/stripe-react-native": "^0.38.6",
     "appwrite": "^17.0.0",
     "expo": "^52.0.46",
     "expo-auth-session": "~6.0.3",
@@ -40,10 +42,12 @@
     "expo-system-ui": "~4.0.9",
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
+    "katex": "^0.16.22",
     "nativewind": "^4.1.23",
     "openai": "^4.85.1",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
+    "react-katex": "^3.1.0",
     "react-native": "^0.76.9",
     "react-native-appwrite": "^0.7.0",
     "react-native-country-flag": "^2.0.2",
@@ -55,14 +59,14 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "^15.12.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-video": "^6.14.1",
     "react-native-web": "~0.19.13",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^13.12.5",
+    "react-native-webview": "^13.15.0",
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
