--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
+    "react-native-math-view": "^3.9.5",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -66,7 +67,7 @@
     "react-native-video": "^6.14.1",
     "react-native-web": "~0.19.13",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^13.15.0",
+    "react-native-webview": "13.12.5",
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5",
