--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.5",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -56,6 +56,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
+    "react-native-google-mobile-ads": "^15.7.0",
     "react-native-math-view": "^3.9.5",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.17.4",
