--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "appwrite": "^17.0.0",
     "expo": "53.0.22",
     "expo-auth-session": "~6.2.1",
+    "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
@@ -57,8 +58,10 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.5",
     "react-native-google-mobile-ads": "^15.7.0",
+    "react-native-iap": "^14.4.0",
     "react-native-math-view": "^3.9.5",
     "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-nitro-modules": "^0.29.6",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
