--- a/eas.json
+++ b/eas.json
@@ -24,14 +24,14 @@
       }
     },
     "production": {
-      "autoIncrement": true,
-      "android": {
-        "buildType": "apk"
-      },
-      "env": {
-        "EXPO_PUBLIC_API_URL": "key_here"
-      }
+    "autoIncrement": true,
+    "android": {
+      "buildType": "app-bundle"
+    },
+    "env": {
+      "EXPO_PUBLIC_API_URL": "avs"
     }
+}
   },
   "submit": {
     "production": {}
