--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "53.0.22",
     "expo-auth-session": "~6.2.1",
     "expo-build-properties": "~0.14.8",
+    "expo-clipboard": "^8.0.7",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
