--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-google-mobile-ads": "^15.7.0",
     "react-native-iap": "^14.4.0",
     "react-native-math-view": "^3.9.5",
+    "react-native-mmkv": "^4.0.1",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-nitro-modules": "^0.29.6",
     "react-native-reanimated": "~3.17.4",
