--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-gifted-chat": "^2.6.5",
     "react-native-google-mobile-ads": "^15.7.0",
     "react-native-iap": "^14.4.0",
+    "react-native-katex": "^1.3.0",
     "react-native-math-view": "^3.9.5",
     "react-native-mmkv": "^4.0.1",
     "react-native-navigation-bar-color": "^2.0.2",
